<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="debug_view_app_name">Debug event viewer</string>
    <string name="debug_view_channel_name">Events</string>
    <string name="debug_view_channel_description">Notifications for events</string>
    <string name="debug_view_title">Recording %1$s events</string>
    <string name="debug_view_clear">Clear all</string>

    <string name="debug_view_analytic_title">Analytics</string>
    <string name="debug_view_event_copied">Event copied</string>
    <string name="debug_view_event_cleared">All event cleared</string>
    <string name="debug_view_event_details_title">Event details</string>
    <string name="debug_view_event_action_clear_title">Clear all event</string>
    <string name="debug_view_event_action_search_title">Search event</string>
    <string name="debug_view_event_action_filter_title">Filter event</string>
    <string name="debug_view_event_action_copy_title">Copy event</string>
    <string name="debug_view_event_action_share_title">Share event</string>
    <string name="debug_view_event_empty">No data</string>
    <string name="debug_view_event_start_recording">Start recording</string>
    <string name="debug_view_event_stop_recording">Stop recording…</string>
    <string name="debug_view_event_search_hint">Event name or event property</string>
    <string name="debug_view_event_apply_filter">Apply</string>
    <string name="debug_view_event_reset_filter">Reset</string>
    <string name="debug_view_event_filter_hint">Paste event name list here</string>
    <string name="debug_view_event_filter_type_title">Separate by</string>
    <string name="debug_view_event_filter_type_newline">New line</string>
    <string name="debug_view_event_filter_type_comma">Comma</string>
    <string name="debug_view_event_filter_type_colon">Colon</string>

    <string name="debug_view_analytic_inactive">Inactive</string>
    <string name="debug_view_analytic_recording">Recording…</string>
</resources>
