<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.App.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:text="@string/debug_view_event_action_filter_title"
        app:layout_constraintBottom_toTopOf="@+id/filter_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filter_title_tv"
        style="@style/TextAppearance.App.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/debug_view_event_filter_type_title"
        app:layout_constraintBottom_toTopOf="@+id/filter_type_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_type_chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/filter_paste_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_paste_container"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/debugview_rounded_medium"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/event_apply_filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_title_text"
            style="@style/TextAppearance.App.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/filter_paste_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:alpha="0.3"
            app:layout_constraintBottom_toTopOf="@+id/guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/debugview_content_paste" />

        <View
            android:id="@+id/guide"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_title_text_hint"
            style="@style/TextAppearance.App.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:alpha="0.3"
            android:text="@string/debug_view_event_filter_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/event_reset_filter_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/debug_view_event_reset_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/event_apply_filter_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/event_apply_filter_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/debug_view_event_apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_reset_filter_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
